--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -92,8 +92,8 @@
 
 # > 推荐使用的旧版应用如下链接所示
 ; https://docs.qq.com/sheet/DYmRTQXpVY0hNcGls?tab=y6do1j
-# > 利用描述文件屏蔽IOS更新提醒（兼容IOS13、14、15、16）
-; https://initnil.com/tvOS.mobileconfig
+# > 利用描述文件屏蔽IOS更新提醒（兼容IOS13、14、15、16、17）
+; https://static.itsnebula.net/apple/noota/17.mobileconfig
 
 
 # > QuantumultX @ddgksf2013 设置推荐
