--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -9,7 +9,7 @@
 # @Appreciate        https://shrtm.nu/hGk2
 # @MainFunction      智能分流、自动优选、去除油管广告、OpenAi&GV默认US、
 # @ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# @ConfigVersion     2.0 (V105)
+# @ConfigVersion     2.0 (V106)
 # @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 # ==/UserScript==
 
@@ -69,11 +69,11 @@ FINAL,兜底分流
 ^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
 
-#[手动添加Module]
+#[请手动添加Module]
 #1墨鱼去广告合集  https://whatshub.top/module/startingad.module
 #2猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
 #3果果VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/BuyiTunes.Vip.sgmodule
-#4Spotify音乐VIP https://raw.githubusercontent.com/app2smile/rules/master/module/spotify.module
+#4Spotify音乐VIP  https://raw.githubusercontent.com/app2smile/rules/master/module/spotify.module
 
 [Script]
 # ======= 视频PIP|后台播放|瀑布流|搜索页|播放页|短视频|贴片广告  ======= #
