--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -9,7 +9,7 @@
 # @Appreciate        https://shrtm.nu/hGk2
 # @MainFunction      智能分流、自动优选、去除油管广告、OpenAi&GV默认US、
 # @ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# @ConfigVersion     2.0 (V106)
+# @ConfigVersion     2.0 (V107)
 # @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 # ==/UserScript==
 
@@ -70,7 +70,7 @@ FINAL,兜底分流
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
 
 #[请手动添加Module]
-#1墨鱼去广告合集  https://whatshub.top/module/startingad.module
+#1墨鱼去广告合集[开屏2.0|高德地图|微信小程序|B站|菜鸟裹裹|bing|keep|网易云|随手记|微信公众号|小红书|喜马拉雅|知乎|Pixiv|酷安|百度地图]  https://whatshub.top/module/startingad.module
 #2猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
 #3果果VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/BuyiTunes.Vip.sgmodule
 #4Spotify音乐VIP  https://raw.githubusercontent.com/app2smile/rules/master/module/spotify.module
