--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -7,9 +7,9 @@
 # @UpdateTime        2024/02/17 15:31UTC/GMT +8
 # @Function          请参考对应的注释或Tag
 # @Appreciate        https://shrtm.nu/hGk2
-# @MainFunction      智能分流、自动优选、去除油管广告、OpenAi&GV默认US、
+# @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
 # @ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# @ConfigVersion     2.0 (V107)
+# @ConfigVersion     2.0 (V108)
 # @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 # ==/UserScript==
 
