--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -126,7 +126,7 @@ udp_whitelist=1-442, 444-65535
 # > 默认关闭根据wifi切换模式，如需开启，删除下方的"#"即可
 #running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_direct
 # > dns_exclusion_list
-dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com, *.sucheon.com
+dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 
 
 
@@ -218,6 +218,7 @@ server=/*.icloud.com/119.29.29.29
 server=/*.icloud.com.cn/119.29.29.29
 server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
+server=/*.sucheon.com/192.168.3.250
 
 
 
