--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -195,11 +195,11 @@ https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.re
 
 
 # > 魔法仅供临时使用1
-https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg#delreg=.*&rename=@tg%40ddgksf2021-+@num-$index7, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
+;https://raw.githubusercontent.com/Jsnzkpg/Jsnzkpg/Jsnzkpg/Jsnzkpg#delreg=.*&rename=@tg%40ddgksf2021-+@num-$index7, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
 # > 魔法仅供临时使用2
 ;https://sub.sharecentre.online/sub#delreg=.*&rename=@tg%40ddgksf2021-+@num-$index7, tag=🐟临时使用, update-interval=3600, opt-parser=true, enabled=true
 https://api.leiting.io/api/v1/client/subscribe?token=01d04374bc772c6505888e633837b4a5, tag=雷霆, update-interval=172800, opt-parser=false, enabled=true
-https://moji.mojieurl.com/api/v1/client/subscribe?token=ff3b9255a83db79262757f65c0ac466b, tag=魔戒机场, update-interval=172800, opt-parser=false, enabled=true
+;https://moji.mojieurl.com/api/v1/client/subscribe?token=ff3b9255a83db79262757f65c0ac466b, tag=魔戒机场, update-interval=172800, opt-parser=false, enabled=true
 https://bajie.info/api/v1/client/subscribe?token=d3a59a5f07f9d2ee56495c72541520bb, tag=八戒机场, update-interval=172800, opt-parser=false, enabled=true
 
 
