--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -210,7 +210,7 @@ https://bajie.info/api/v1/client/subscribe?token=d3a59a5f07f9d2ee56495c72541520b
 ;doh-server = https://223.5.5.5/dns-query, https://223.6.6.6/dns-query
 # > QuantumultX开启IPV6方法，删去下面的「no-ipv6」，在「VPN」栏中，开启「兼容性增强」
 no-ipv6
-no-system
+;no-system
 server=223.5.5.5
 server=119.29.29.29
 server=114.114.114.114
@@ -218,7 +218,6 @@ server=/*.icloud.com/119.29.29.29
 server=/*.icloud.com.cn/119.29.29.29
 server=/*.tencent.com/119.29.29.29
 server=/*.weixin.com/119.29.29.29
-server=/*.sucheon.com/192.168.3.250
 
 
 
