--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -9,7 +9,7 @@
 # @Appreciate        https://shrtm.nu/hGk2
 # @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
 # @ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# @ConfigVersion     2.0 (V108)
+# @ConfigVersion     2.0 (V109)
 # @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 # ==/UserScript==
 
@@ -69,7 +69,8 @@ FINAL,兜底分流
 ^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
 ^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
 
-#[请手动添加Module]
+#[Module]
+#手动添加
 #1墨鱼去广告合集[开屏2.0|高德地图|微信小程序|B站|菜鸟裹裹|bing|keep|网易云|随手记|微信公众号|小红书|喜马拉雅|知乎|Pixiv|酷安|百度地图]  https://whatshub.top/module/startingad.module
 #2猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
 #3果果VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/BuyiTunes.Vip.sgmodule
