--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -4,12 +4,12 @@
 # @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 # @WechatID          公众号墨鱼手记
 # @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-# @UpdateTime        2024/02/17 15:31UTC/GMT +8
+# @UpdateTime        2024/03/03 15:42UTC/GMT +8
 # @Function          请参考对应的注释或Tag
 # @Appreciate        https://shrtm.nu/hGk2
 # @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
 # @ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# @ConfigVersion     2.0 (V109)
+# @ConfigVersion     2.0 (V110)
 # @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 # ==/UserScript==
 
@@ -17,6 +17,12 @@
 
 [General]
 
+# ======= 注释 ======= #
+# > Shadowrocket打开HTTPS解密方法：
+# > 1 点击配置文件ⓘ - HTTPS解密 - 证书 - 生成新的CA证书 - 安装证书
+# > 2 手机设置 - 已下载描述文件 - 安装
+# > 3 手机设置 - 通用 - 关于本机 - 证书信任设置 - 开启对应Shadowrocket证书信任
+# ======= 通用 ======= #
 bypass-system = true
 doh-server = https://dns.alidns.com/dns-query,https://doh.pub/dns-query
 skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
@@ -25,24 +31,27 @@ dns-server = system
 ipv6 = false
 
 [Proxy Group]
+
+# ======= 注释 ======= #
+# > 代理分组类型：select: 手动切换节点；url-test: 自动切换延迟最低节点；fallback: 节点挂掉时自动切换其他可用节点；load-balance: 不同规则的请求使用分组里的不同节点进行连接；random: 随机使用分组里的不同节点进行连接
+# > 代理分组其他设置参数：interval: 指定间隔多长时间后需要重新发起测试；timeout: 如果测试在超时前未完成，放弃测试；tolerance: 只有当新优胜者的分数高于旧优胜者的分数加上公差时，才会进行线路更换；url: 指定要测试的URL。
+# ======= 手动 ======= #
 全球加速 = select,自动选择,香港节点,台湾节点,日本节点,狮城节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 苹果服务 = select,DIRECT,自动选择,香港节点,台湾节点,狮城节点,日本节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 哔哩哔哩 = select,DIRECT,自动选择,香港节点,台湾节点,狮城节点,日本节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 国际媒体 = select,自动选择,香港节点,台湾节点,日本节点,狮城节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 兜底分流= select,DIRECT,PROXY,自动选择,香港节点,台湾节点,日本节点,狮城节点,美国节点,interval=86400,timeout=5,select=2,url=http://www.gstatic.com/generate_204
-
-自动选择 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=^(.(?!(网易|墨鱼)))*$,timeout=5,tolerance=0,interval=86400
-香港节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$,timeout=5,tolerance=0,interval=86400
-台湾节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$,timeout=5,tolerance=0,interval=86400
-日本节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$,timeout=5,tolerance=0,interval=86400
-狮城节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$,timeout=5,tolerance=0,interval=86400
-美国节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$,timeout=5,tolerance=0,interval=86400
+# ======= 自动 ======= #
+自动选择 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=^(.(?!(网易|墨鱼)))*$,timeout=5,tolerance=0,interval=600
+香港节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|美)).)*$,timeout=5,tolerance=0,interval=600
+台湾节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|美)).)*$,timeout=5,tolerance=0,interval=600
+日本节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$,timeout=5,tolerance=0,interval=600
+狮城节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(新|狮|獅|SG|(?i)Singapore))^((?!(港|台|日|韩|美)).)*$,timeout=5,tolerance=0,interval=600
+美国节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$,timeout=5,tolerance=0,interval=600
 
 [Rule]
-# Youtube屏蔽UDP
-AND,((DOMAIN-SUFFIX,googlevideo.com), (PROTOCOL,UDP)),REJECT
-AND,((DOMAIN,youtubei.googleapis.com), (PROTOCOL,UDP)),REJECT
 
+# ======= 分流 ======= #
 DOMAIN-SET,https://anti-ad.net/surge2.txt, REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list, 全球加速
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,美国节点
@@ -53,37 +62,34 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, 全球加速
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list, DIRECT
 GEOIP,CN,DIRECT
+# > FINAL表示当其他所有规则都匹配不到时才使用兜底分流的策略
 FINAL,兜底分流
 
 [Host]
+
 *testflight.apple.com = server:8.8.4.4
 
 
 [URL Rewrite]
-# ======= 视频广告请求 ======= #
-(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302 
-^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
 
-# ======= 通用广告请求 ======= #
-^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
-^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
-^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
+# > Google搜索引擎防跳转的重写。
+^https?://(www.)?g.cn https://www.google.com 302
+^https?://(www.)?google.cn https://www.google.com 302
 
-#[Module]
-#手动添加
-#1墨鱼去广告合集[开屏2.0|高德地图|微信小程序|B站|菜鸟裹裹|bing|keep|网易云|随手记|微信公众号|小红书|喜马拉雅|知乎|Pixiv|酷安|百度地图]  https://whatshub.top/module/startingad.module
-#2猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
-#3果果VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/BuyiTunes.Vip.sgmodule
-#4Spotify音乐VIP  https://raw.githubusercontent.com/app2smile/rules/master/module/spotify.module
+# > [Module]
+# > 请手动按需添加下面的模块
+# > 1 Youtube去广告及功能增强 https://github.com/Maasea/sgmodule/raw/master/YouTube.Enhance.sgmodule
+# > 2 墨鱼去广告合集[开屏2.0|高德地图|微信小程序|B站|菜鸟裹裹|bing|keep|网易云|随手记|微信公众号|小红书|喜马拉雅|知乎|Pixiv|酷安|百度地图]  https://whatshub.top/module/startingad.module
+# > 3 猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
+# > 4 Spotify音乐VIP  https://raw.githubusercontent.com/app2smile/rules/master/module/spotify.module
 
 [Script]
-# ======= 视频PIP|后台播放|瀑布流|搜索页|播放页|短视频|贴片广告  ======= #
-youtube.request = type=http-request,pattern=^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|reel\/reel_watch_sequence),requires-body=1,max-size=-1,binary-body-mode=1,script-path=https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/dist/youtube.request.preview.js
-youtube.response = type=http-response,pattern=^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|search|reel\/reel_watch_sequence|guide|account\/get_setting),requires-body=1,max-size=-1,binary-body-mode=1,script-path=https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/dist/youtube.response.preview.js,argument="{"targetLang":"{{{目标翻译语言}}}","blockUpload":{{{屏蔽上传按钮}}},"immersive":{{{屏蔽选段按钮}}}}"
 
 
 [MITM]
-hostname = -redirector*.googlevideo.com,*.googlevideo.com,www.youtube.com,s.youtube.com,youtubei.googleapis.com,-*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+# > Shadowrocket仅会解密hostname指定的域名的请求，可以使用通配符。也可以使用前缀 - 排除特定主机名，如 -*.example.com
+# > iOS系统和某些应用有严格的安全策略，仅信任某些特定的证书，对这些域名启动解密可能导致问题，如 *.apple.com，*.icloud.com。
+hostname = *.google.cn, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
 
 ca-passphrase = 
 ca-p12 = 
