--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,21 +1,18 @@
-# ==UserScript==
-# @ConfigName        墨鱼自用的小火箭配置文件
-# @Author            @ddgksf2013
-# @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
-# @WechatID          公众号墨鱼手记
-# @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-# @UpdateTime        2024/03/03 15:42UTC/GMT +8
-# @Function          请参考对应的注释或Tag
-# @Appreciate        https://shrtm.nu/hGk2
-# @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
-# @ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# @ConfigVersion     2.0 (V110)
-# @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
-# ==/UserScript==
-
-
-
 [General]
+
+# ======= 头部 ======= #
+# > ConfigName        墨鱼自用的小火箭配置文件
+# > Author            @ddgksf2013
+# > TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
+# > WechatID          公众号墨鱼手记
+# > Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
+# > UpdateTime        2024/03/03 15:42UTC/GMT +8
+# > Function          请参考对应的注释或Tag
+# > Appreciate        https://shrtm.nu/hGk2
+# > MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
+# > ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
+# > ConfigVersion     2.0 (V110)
+# > ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 
 # ======= 注释 ======= #
 # > Shadowrocket打开HTTPS解密方法：
@@ -62,7 +59,6 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list, 全球加速
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list, DIRECT
 GEOIP,CN,DIRECT
-# > FINAL表示当其他所有规则都匹配不到时才使用兜底分流的策略
 FINAL,兜底分流
 
 [Host]
