--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -11,7 +11,7 @@
 # > Appreciate        https://shrtm.nu/hGk2
 # > MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
 # > ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# > ConfigVersion     2.0 (V113)
+# > ConfigVersion     2.0 (V114)
 # > ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 
 # ======= 注释 ======= #
@@ -50,6 +50,9 @@ ipv6 = false
 美国节点 = url-test,select=0,url=http://www.gstatic.com/generate_204,policy-regex-filter=(?=.*(美|US|(?i)States|American))^((?!(港|台|日|韩|新)).)*$,timeout=5,tolerance=0,interval=600
 
 [Rule]
+# ======= 屏蔽UDP ======= #
+AND,((DOMAIN-SUFFIX,googlevideo.com), (PROTOCOL,UDP)),REJECT
+AND,((DOMAIN,youtubei.googleapis.com), (PROTOCOL,UDP)),REJECT
 
 # ======= 分流 ======= #
 DOMAIN-SET,https://anti-ad.net/surge2.txt, REJECT
@@ -71,9 +74,18 @@ FINAL,兜底分流
 
 [URL Rewrite]
 
-# > Google搜索引擎防跳转的重写。
+# ======= Google搜索重写 ======= #
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
+
+# ======= 视频广告请求 ======= #
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302 
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
+
+# ======= 通用广告请求 ======= #
+^https?:\/\/(www|s)\.youtube\.com\/api\/stats\/ads - reject
+^https?:\/\/(www|s)\.youtube\.com\/(pagead|ptracking) - reject
+^https?:\/\/s\.youtube\.com\/api\/stats\/qoe\?adcontext - reject
 
 # > [Module]
 # > 请手动按需添加下面的模块
@@ -83,12 +95,14 @@ FINAL,兜底分流
 # > 4 Spotify音乐VIP  https://raw.githubusercontent.com/app2smile/rules/master/module/spotify.module
 
 [Script]
-
+# ======= 视频PIP|后台播放|瀑布流|搜索页|播放页|短视频|贴片广告  ======= #
+youtube.request = type=http-request,pattern=^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|reel\/reel_watch_sequence),requires-body=1,max-size=-1,binary-body-mode=1,engine={{{脚本执行引擎}}},script-path=https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/dist/youtube.request.preview.js
+youtube.response = type=http-response,pattern=^https:\/\/youtubei\.googleapis\.com\/youtubei\/v1\/(browse|next|player|search|reel\/reel_watch_sequence|guide|account\/get_setting),requires-body=1,max-size=-1,binary-body-mode=1,engine={{{脚本执行引擎}}},script-path=https://raw.githubusercontent.com/Maasea/sgmodule/master/Script/Youtube/dist/youtube.response.preview.js,argument="{"lyricLang":"{{{歌词翻译语言}}}","captionLang":"{{{字幕翻译语言}}}","blockUpload":{{{屏蔽上传按钮}}},"immersive":{{{屏蔽选段按钮}}},"debug":{{{启用调试模式}}}}"
 
 [MITM]
 # > Shadowrocket仅会解密hostname指定的域名的请求，可以使用通配符。也可以使用前缀 - 排除特定主机名，如 -*.example.com
 # > iOS系统和某些应用有严格的安全策略，仅信任某些特定的证书，对这些域名启动解密可能导致问题，如 *.apple.com，*.icloud.com。
-hostname = *.google.cn, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+hostname = *.google.cn, -redirector*.googlevideo.com, *.googlevideo.com, www.youtube.com, s.youtube.com, youtubei.googleapis.com, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
 
 ca-passphrase = 
 ca-p12 = 
