--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -75,8 +75,7 @@ FINAL,兜底分流
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
 
-# > [Module]
-# > 请手动按需添加下面的模块
+# ======= 手动添加模块 ======= #
 # > 1 Youtube去广告及功能增强 https://github.com/Maasea/sgmodule/raw/master/YouTube.Enhance.sgmodule
 # > 2 墨鱼去广告合集[开屏2.0|高德地图|微信小程序|B站|菜鸟裹裹|bing|keep|网易云|随手记|微信公众号|小红书|喜马拉雅|知乎|Pixiv|酷安|百度地图]  https://whatshub.top/module/startingad.module
 # > 3 猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
