--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -1,18 +1,17 @@
 [General]
 
-# ======= 头部 ======= #
-# > ConfigName        墨鱼自用的小火箭配置文件
-# > Author            @ddgksf2013
-# > TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
-# > WechatID          公众号墨鱼手记
-# > Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-# > UpdateTime        2024/03/04 13:12UTC/GMT +8
-# > Function          请参考对应的注释或Tag
-# > Appreciate        https://shrtm.nu/hGk2
-# > MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
-# > ExpressThanks     @ddgksf2013,@blackmatrix7, @Maasea
-# > ConfigVersion     2.0 (V115)
-# > ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
+# ======= 说明 ======= #
+# > 墨鱼自用的小火箭配置文件
+# > 作者@ddgksf2013
+# > 𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
+# > 公众号@墨鱼手记
+# > 💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
+# > 2024/03/05 19:12UTC/GMT +8
+# > 请参考对应的注释或Tag
+# > 去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
+# > 贡献@ddgksf2013,@blackmatrix7, @Maasea
+# > 2.0 (V116)
+# > https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 
 # ======= 注释 ======= #
 # > Shadowrocket打开HTTPS解密方法：
@@ -75,7 +74,7 @@ FINAL,兜底分流
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
 
-# ======= 手动添加模块 ======= #
+# ======= 需要手动添加模块====== #
 # > 1 Youtube去广告及功能增强 https://github.com/Maasea/sgmodule/raw/master/YouTube.Enhance.sgmodule
 # > 2 墨鱼去广告合集[开屏2.0|高德地图|微信小程序|B站|菜鸟裹裹|bing|keep|网易云|随手记|微信公众号|小红书|喜马拉雅|知乎|Pixiv|酷安|百度地图]  https://whatshub.top/module/startingad.module
 # > 3 猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
