--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -70,11 +70,15 @@ FINAL,兜底分流
 
 [URL Rewrite]
 
-# ======= Google搜索重写 ======= #
+# ======= Google搜索重写  ======= #
 ^https?://(www.)?g.cn https://www.google.com 302
 ^https?://(www.)?google.cn https://www.google.com 302
 
-# ======= 需要手动添加模块====== #
+# ======= 油管视频广告请求 ======= #
+(^https?:\/\/[\w-]+\.googlevideo\.com\/(?!dclk_video_ads).+?)&ctier=L(&.+?),ctier,(.+) $1$2$3 302 
+^https?:\/\/[\w-]+\.googlevideo\.com\/(?!(dclk_video_ads|videoplayback\?)).+&oad - reject
+
+# ======= 需要手动添加模块 ====== #
 # > 1 Youtube去广告及功能增强 https://github.com/Maasea/sgmodule/raw/master/YouTube.Enhance.sgmodule
 # > 2 墨鱼去广告合集[开屏2.0|高德地图|微信小程序|B站|菜鸟裹裹|bing|keep|网易云|随手记|微信公众号|小红书|喜马拉雅|知乎|Pixiv|酷安|百度地图]  https://whatshub.top/module/startingad.module
 # > 3 猫猫VIP解锁合集 https://github.com/ddgksf2013/Modules/raw/main/RevenueCat.Vip.sgmodule
@@ -86,7 +90,7 @@ FINAL,兜底分流
 [MITM]
 # > Shadowrocket仅会解密hostname指定的域名的请求，可以使用通配符。也可以使用前缀 - 排除特定主机名，如 -*.example.com
 # > iOS系统和某些应用有严格的安全策略，仅信任某些特定的证书，对这些域名启动解密可能导致问题，如 *.apple.com，*.icloud.com。
-hostname = *.google.cn, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
+hostname = *.googlevideo.com, *.google.cn, -*.apple.com, -consumer.fcbox.com, -*huami.com, -weather-data.apple.com, -*amemv.com, -*snssdk.com, -www.google.com
 
 ca-passphrase = 
 ca-p12 = 
