--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -6,11 +6,11 @@
 # > 𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 # > 公众号@墨鱼手记
 # > 💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-# > 2024/03/05 19:12UTC/GMT +8
+# > 2024/03/18 18:09UTC/GMT +8
 # > 请参考对应的注释或Tag
 # > 去开屏广告、应用净化、超级VIP、智能分流、自动优选、去除油管广告、OpenAi&GV默认US
 # > 贡献@ddgksf2013,@blackmatrix7, @Maasea
-# > 2.0 (V116)
+# > 2.0 (V117)
 # > https://github.com/ddgksf2013/Profile/raw/master/Shadowrocket.conf
 
 # ======= 注释 ======= #
@@ -18,6 +18,10 @@
 # > 1 点击配置文件ⓘ - HTTPS解密 - 证书 - 生成新的CA证书 - 安装证书
 # > 2 手机设置 - 已下载描述文件 - 安装
 # > 3 手机设置 - 通用 - 关于本机 - 证书信任设置 - 开启对应Shadowrocket证书信任
+
+# ======= 手动 ======= #
+# > 请在「设置」-「GeoLite2资料库」-「国家」-「URL」填写下面链接
+# https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 
 # ======= 通用 ======= #
 bypass-system = true
@@ -28,10 +32,6 @@ dns-server = system
 ipv6 = false
 
 [Proxy Group]
-
-# ======= 注释 ======= #
-# > 代理分组类型：select: 手动切换节点；url-test: 自动切换延迟最低节点；fallback: 节点挂掉时自动切换其他可用节点；load-balance: 不同规则的请求使用分组里的不同节点进行连接；random: 随机使用分组里的不同节点进行连接
-# > 代理分组其他设置参数：interval: 指定间隔多长时间后需要重新发起测试；timeout: 如果测试在超时前未完成，放弃测试；tolerance: 只有当新优胜者的分数高于旧优胜者的分数加上公差时，才会进行线路更换；url: 指定要测试的URL。
 
 # ======= 手动 ======= #
 全球加速 = select,自动选择,香港节点,台湾节点,日本节点,狮城节点,美国节点,interval=86400,timeout=5,select=0,url=http://www.gstatic.com/generate_204
