--- a/Shadowrocket.conf
+++ b/Shadowrocket.conf
@@ -51,7 +51,7 @@ ipv6 = false
 [Rule]
 
 # ======= 分流 ======= #
-DOMAIN-SET,https://anti-ad.net/surge2.txt, REJECT
+RULE-SET,https://raw.githubusercontent.com/Cats-Team/AdRules/main/adrules.list, REJECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list, 全球加速
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,美国节点
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GoogleVoice/GoogleVoice.list,美国节点
