--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024/03/21 22:38UTC/GMT +8
+// @UpdateTime        2024/04/24 19:52UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V202)
+// @ConfigVersion     2.0 (V203)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -79,6 +79,7 @@
 # [+]2024-03-11 63、修改部分TAG说明，注释比价脚本[因api接口失效，比价无意义，推荐使用慢慢买APP]，将自动测速600秒增加到900秒
 # [+]2024-03-18 64、将广告屏蔽的分流[https://anti-ad.net/surge2.txt]更换为[https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf]
 # [+]2024-03-21 65、由于广告屏蔽无法做到100%完美，故由墨鱼维护Unbreak.list分流，用以修正误屏蔽的域名，请及时更新替换
+# [+]2024-04-24 66、修复用户反馈的开启running_mode，Wifi直连下，掌上银行或招商银行无法联网的BUG
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -129,7 +130,7 @@ udp_whitelist=1-442, 444-65535
 # > 默认关闭根据wifi切换模式，如需开启，删除下方的"#"即可
 #running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_direct
 # > dns_exclusion_list
-dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
+dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn
 
 
 
