--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          公众号墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024/05/01 12:59UTC/GMT +8
+// @UpdateTime        2024/05/03 10:07UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V204)
+// @ConfigVersion     2.0 (V205)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -80,7 +80,7 @@
 # [+]2024-03-18 64、将广告屏蔽的分流[https://anti-ad.net/surge2.txt]更换为[https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf]
 # [+]2024-03-21 65、由于广告屏蔽无法做到100%完美，故由墨鱼维护Unbreak.list分流，用以修正误屏蔽的域名，请及时更新替换
 # [+]2024-04-24 66、修复用户反馈的开启running_mode，Wifi直连下，掌上银行或招商银行无法联网的BUG
-# [+]2024-05-01 67、移除TikTok重写，新版已无需重写解锁，只需分流即可[小白配置2.0已自带]
+# [-]2024-05-01 67、移除TikTok重写，新版已无需重写解锁，建议将手机地区换成非国区，然后使用TikTok分流即可[小白配置2.0已自带]
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -286,7 +286,7 @@ final, 兜底分流
 [http_backend]
 
 # > Boxjs设置，改为使用http backend方式，访问地址改为http://127.0.0.1:9999，更新配置后请长按风车-更新，然后重启代理
-# > BoxJs相关教程参考 https://docs.boxjs.app/
+# > BoxJs相关教程参考「https://docs.boxjs.app」
 https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=boxjs.com, tag=BoxJS, path=^/, enabled=false
 
 
