--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -81,7 +81,7 @@
 # [+]2024-03-21 65、由于广告屏蔽无法做到100%完美，故由墨鱼维护Unbreak.list分流，用以修正误屏蔽的域名，请及时更新替换
 # [+]2024-04-24 66、修复用户反馈的开启running_mode，Wifi直连下，掌上银行或招商银行无法联网的BUG
 # [-]2024-05-03 67、移除TikTok重写，新版已无需重写解锁，建议将手机地区换成非国区，然后使用TikTok分流即可[小白配置2.0已自带,并已更换为BK7]
-# [-]2024-06-01 68、因DivineEngine删除，替换GV分流，并将全球加速的分流换成另外一个，并删除重定向[Safari超级搜索已包含该功能]
+# [-]2024-06-01 68、因DivineEngine删除，替换GV分流，并将全球加速的分流换成另外一个
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -174,6 +174,7 @@ https://gist.githubusercontent.com/ddgksf2013/beec132ca0c3570ffa0cf331bce8f82a/r
 https://github.com/ddgksf2013/Rewrite/raw/master/Html/WebAdBlock.conf, tag=影视网站去广告@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/Html/Q-Search.conf, tag=Safari超级搜索@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
 https://github.com/ddgksf2013/Rewrite/raw/master/Html/Douban.conf, tag=豆瓣网页观影快捷跳转@ddgksf2013, update-interval=86400, opt-parser=false, enabled=true
+https://raw.githubusercontent.com/ddgksf2013/Rewrite/master/Html/General.conf, tag=神机重定向@DivineEngine, update-interval=86400, opt-parser=false, enabled=true
 
 
 # ======= 功能增强 ======= #
