--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -82,7 +82,7 @@
 # [+]2024-04-24 66、修复用户反馈的开启running_mode，Wifi直连下，掌上银行或招商银行无法联网的BUG
 # [-]2024-05-03 67、移除TikTok重写，新版已无需重写解锁，建议将手机地区换成非国区，然后使用TikTok分流即可[小白配置2.0已自带,并已更换为BK7]
 # [-]2024-06-01 68、因DivineEngine删除，替换GV分流，并将全球加速的分流换成另外一个，同时替换Google重定向重写
-# [+]2024-06-09 69、增加如何将[自动选择]切换成[手动选择]的文字说明
+# [+]2024-06-09 69、增加如何将[自动选择]切换成[手动选择]的文字说明，满足不同群体的需求
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
