--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024/06/27 22:06UTC/GMT +8
+// @UpdateTime        2024/07/20 20:15UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、网易云解灰色Music、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V211)
+// @ConfigVersion     2.0 (V212)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -84,6 +84,7 @@
 # [-]2024-06-01 68、因DivineEngine删除，替换GV分流，并将全球加速的分流换成另外一个，同时替换Google重定向重写
 # [+]2024-06-09 69、增加如何将[自动选择]切换成[手动选择]的文字说明，满足不同群体的需求
 # [+]2024-06-27 70、将全球加速的分流链接替换为@ConnersHua，以防全球加速中分流与OPENAI冲突
+# [-]2024-07-20 71、因网易云音乐灰色解锁节点年久失修，故简化配置，删除网易云的分流和policy
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -223,7 +224,6 @@ server=/*.weixin.com/119.29.29.29
 
 [policy]
 
-static=网易云音乐, direct, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Netease_Music_Unlock.png
 static=全球加速, 自动选择, direct, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点, proxy, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
 static=苹果服务, direct, 香港节点, 台湾节点, 美国节点, 日本节点, 狮城节点, proxy, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Apple.png
 static=哔哩哔哩, direct, 香港节点, 台湾节点, img-url=https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/bilibili.png
@@ -243,7 +243,6 @@ url-latency-benchmark=美国节点, server-tag-regex=(?=.*(美|US|(?i)States|Ame
 
 [filter_remote]
 
-https://github.com/ddgksf2013/Filter/raw/master/NeteaseMusic.list, tag=解锁网易云音乐, force-policy=网易云音乐, update-interval=172800, opt-parser=false, enabled=false
 https://raw.githubusercontent.com/ddgksf2013/Filter/master/Unbreak.list, tag=规则修正, force-policy=direct, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/Cats-Team/AdRules/main/qx.conf, tag=广告终结者, force-policy=reject, update-interval=172800, opt-parser=true, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/WeChat/WeChat.list, tag=微信直连, force-policy=direct, update-interval=172800, opt-parser=false, enabled=true
