--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V213)
+// @ConfigVersion     2.0 (V214)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -84,18 +84,12 @@
 # [-]2024-06-01 68、因DivineEngine删除，替换GV分流，并将全球加速的分流换成另外一个，同时替换Google重定向重写
 # [+]2024-06-09 69、增加如何将[自动选择]切换成[手动选择]的文字说明，满足不同群体的需求
 # [+]2024-06-27 70、将全球加速的分流链接替换为@ConnersHua，以防全球加速中分流与OPENAI冲突
-# [-]2024-07-20 71、因网易云音乐灰色解锁节点年久失修，故简化配置，删除网易云的分流和policy
+# [-]2024-07-20 71、因网易云音乐灰色解锁节点年久失修，故简化配置，删除网易云的分流和policy，并删除相关文字描述
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
 ; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb
 ; https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb
-
-
-# > 解锁网易云灰色音乐，获取证书链接 
-; https://raw.githubusercontent.com/nondanee/UnblockNeteaseMusic/master/ca.crt
-# > 具体操作步骤可参考下面这篇《利用QuantumultX解锁网易云付费及非版权音乐》文章
-; https://mp.weixin.qq.com/s/ca6U1O2FTfcqzL7TnJ04IQ
 
 
 # > QuantumultX图标库订阅，打开以下URL，手机端点击图片即可快捷添加「1.0.30+」
