--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 // @WechatID          墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024/08/02 18:52UTC/GMT +8
+// @UpdateTime        2024/08/25 22:32UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V215)
+// @ConfigVersion     2.0 (V216)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -86,6 +86,7 @@
 # [+]2024-06-27 70、将全球加速的分流链接替换为@ConnersHua，以防全球加速中分流与OPENAI冲突
 # [-]2024-07-20 71、因网易云音乐灰色解锁节点年久失修，故简化配置，删除网易云的分流和policy，并删除相关文字描述
 # [+]2024-08-02 72、移除Netflix评分、油管字幕翻译、影视网站去广告重写，添加彩云天气净化重写
+# [+]2024-08-25 73、dns_exclusion_list列表添加广电APP域名
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
@@ -130,7 +131,7 @@ udp_whitelist=1-442, 444-65535
 # > 默认关闭根据wifi切换模式，如需开启，删除下方的"#"即可
 #running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_direct
 # > dns_exclusion_list
-dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn
+dns_exclusion_list=*.10099.com.cn, *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn
 
 
 
