--- a/MihomoParty.yaml
+++ b/MihomoParty.yaml
@@ -1,5 +1,5 @@
 #==========================================
-# @ConfigName        墨鱼自用Mihomo-Party配置文件
+# @ConfigName        墨鱼自用MihomoParty配置文件
 # @Author            @ddgksf2013
 # @TgChannel         𝐡𝐭𝐭𝐩𝐬://𝐭.𝐦𝐞/𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟐𝟏
 # @WechatID          墨鱼手记
@@ -9,7 +9,7 @@
 # @mihomo-party      https://github.com/mihomo-party-org/mihomo-party/releases
 # @Thanks            @blackmatrix7, @Fndroid, @Anti, @Orz-3, @Koolson
 # @Attention         𝐏𝐥𝐞𝐚𝐬𝐞 𝐮𝐬𝐞 𝐭𝐡𝐞 𝐥𝐚𝐭𝐞𝐬𝐭 𝐯𝐞𝐫𝐬𝐢𝐨𝐧 𝐨𝐟 𝐂𝐥𝐚𝐬𝐡𝐟𝐨𝐫𝐖𝐢𝐧𝐝𝐨𝐰𝐬
-# @ConfigVersion     1.0.5
+# @ConfigVersion     1.0.6
 #==========================================
 
 proxy-groups:
@@ -40,7 +40,7 @@ rule-providers:
   Direct:      {behavior: classical, interval: 86400, format: text, type: http, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Direct/Direct.yaml ,                      path: ./ruleset/Direct.yaml       }
   Lan:         {behavior: classical, interval: 86400, format: text, type: http, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Lan/Lan.yaml ,                            path: ./ruleset/Lan.yaml          }
   Download:    {behavior: classical, interval: 86400, format: text, type: http, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Download/Download.yaml ,                  path: ./ruleset/Download.yaml     }
-  Ad:          {behavior: classical, interval: 86400, format: text, type: http, url: https://anti-ad.net/clash.yaml ,                                                                                     path: ./ruleset/anti-ad-clash.yaml}
+  Ad:          {behavior: classical, interval: 86400, format: text, type: http, url: https://cdn.jsdelivr.net/gh/ACL4SSR/ACL4SSR@master/Clash/BanAD.list ,                                                path: ./ruleset/anti-ad-clash.yaml}
   OpenAi:      {behavior: classical, interval: 86400, format: text, type: http, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.yaml ,                      path: ./ruleset/OpenAi.yaml       }
   BiliBili:    {behavior: classical, interval: 86400, format: text, type: http, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/BiliBili/BiliBili.yaml ,                  path: ./ruleset/BiliBili.yaml     }
   Bahamut:     {behavior: classical, interval: 86400, format: text, type: http, url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bahamut/Bahamut.yaml ,                    path: ./ruleset/Bahamut.yaml      } 
