--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,12 +4,12 @@
 // @TgChannel         https://t.me/ddgksf2021
 // @WechatID          墨鱼手记
 // @Feedback          💡请通过邮件反馈问题[其它方式一概无视]：𝐝𝐝𝐠𝐤𝐬𝐟𝟐𝟎𝟏𝟑@𝟏𝟔𝟑.𝐜𝐨𝐦 💡
-// @UpdateTime        2024/11/12 20:49UTC/GMT +8
+// @UpdateTime        2024/11/21 18:20UTC/GMT +8
 // @Function          请参考对应的注释或Tag
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V227)
+// @ConfigVersion     2.0 (V228)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -105,9 +105,8 @@
 ; https://github.com/ddgksf2013/Icon/blob/master/README.md
 
 
-# > 利用描述文件屏蔽IOS更新提醒（兼容IOS13、14、15、16、17）
-# > 去「设置-通用-日期与时间-自动设置」，将日期改为2023年12月14日之前再打开下面链接，安装成功后重启恢复时间设置
-; https://static.itsnebula.net/apple/noota/17.mobileconfig
+# > 利用描述文件屏蔽IOS更新提醒（安装后重启手机）
+; https://github.com/ddgksf2013/WebSite/raw/main/iOS18.mobileconfig
 
 
 # > 广电用户使用QuantumultX微信出现转圈现象解决方案
