--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -9,7 +9,7 @@
 // @Appreciate        https://shrtm.nu/hGk2
 // @MainFunction      去开屏广告、应用净化、超级VIP、智能分流、自动优选、图标订阅、流媒体查询、Boxjs订阅、IOS更新屏蔽
 // @ExpressThanks     @ddgksf2013,@Nick-workflow,@KOP-XIAO,@DivineEngine,@blackmatrix7,@Orz-3,@yjqiang,@O7Y0,@Peng-YM,@Neurogram-R,@id77,@NobyDa,@17mon
-// @ConfigVersion     2.0 (V228)
+// @ConfigVersion     2.0 (V229)
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf
 // ==/UserScript==
 
@@ -94,6 +94,7 @@
 # [+]2024-10-24 78、解决部分用户浏览淘宝时出现卡顿问题
 # [-]2024-10-28 79、移除配置Header的部分描述，移除本地关于百度贴吧的分流[该分流会导致百度地图搜索出现问题]
 # [+]2024-11-12 80、增加广电用户微信转圈的解决方法
+# [+]2024-11-21 81、替换IOS更新屏蔽的URL链接，有需要的可自行安装屏蔽IOS更新
 
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
